opam-version: "2.0"
name: "hidapi-lwt"
authors: "Vincent Botbol <vincent.botbol@nomadic-labs.com>"
maintainer: "Vincent Botbol <vincent.botbol@nomadic-labs.com>"
homepage: "https://github.com/vbmithr/ocaml-hidapi"
bug-reports: "https://github.com/vbmithr/ocaml-hidapi/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-hidapi"
doc: "https://vbmithr.github.io/ocaml-hidapi/doc"

build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.8.2"}
  "conf-hidapi" {build}
  "bigstring" {>= "0.2"}
  "hidapi" {= version}
  "lwt" {>= "5.7.0"}
]
synopsis: "Lwt-wrappers for hidapi"
